# ptcg_ai

./: .gitignore  README.md  TROUBLESHOOTING.md  extract_advanced_manual.py  extract_rulebook.py  pyproject.toml  split_advanced_manual.py  start_services.sh  stop_services.sh
.github/workflows/: ci.yml
agents/players/: __init__.py  base_agent.py  tools.py
agents/referee/: __init__.py  agent.py  tools.py
agents/rule_analyst/: __init__.py  agent.py  analyzer.py  db_access.py  pattern_matcher.py  rulebook_query.py
apps/simulator_api/: README.md  __main__.py  main.py  run.sh
db/migrations/: 000_create_base_tables.sql  001_add_memory_embeddings.sql  003_create_card_execution_plans.sql  004_add_effect_name_to_card_execution_plans.sql  README.md
doc/: advanced-manual_EN.pdfZone.Identifier  advanced-manual_extracted.md  advanced-manual_extracted.txt  implementation_plan_natural_language_requests.md  pattern_matcher_implementation_summary.md  pattern_matcher_optimization_analysis.md  progress_analysis.md  requirement.md  rulebook_extracted.txt
doc/advanced-manual-split/: 00_index.md  part_II_A_B-00.md  part_II_A_C-00.md  part_II_A_C-01.md  part_II_A_C-02.md  part_II_A_D-00.md  part_II_A_D-01.md  part_II_A_E-00.md  part_II_A_E-01.md  part_II_A_E-02.md  part_II_B_B-01.md  part_II_B_B-02.md  part_II_B_B-03.md  (+82 more)
scripts/: README.md  analyze_deck_with_rule_analyst.py  fix_database_from_json.py  fix_null_set_fields.sql  fix_set_ptcgo_code.sql  query_deck_cards.py  run_fix_script.py  run_sql_script.py
src/: main.py
tests/: conftest.py  test_deck_validation.py
(+44 files in other folders)
